--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# IDE-specific / misc files
+.classpath
+.idea/*
+.project
+*.swp
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
